maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: (Int, Int) does not take parameters
  var X = trouverBiscuit()(0)
                          ^JediEscaper:4: error: (Int, Int) does not take parameters
  var Y = trouverBiscuit()(1)
                          ^