maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var X = trouverBiscuit()(0)
  var Y = trouverBiscuit()(1)
  setIndication(X,Y,0)
    // Your code here
}

def trouverBiscuit():(Int,Int)=
{
  var X = 0
  var Y = 0
  while ((X,Y)!=(getMondeLargeur()-1,getMondeHauteur()-1) && !aBiscuit(X,Y))
         {
           if (X<getMondeLargeur()-1)
           {
             X+=1
           }
           else
           {
             X=0
             Y+=1
           }
         }
  return (X,Y)
}